# selenium-currency-scraper

./: .replit  README.md  currencies.csv  lambda_function.py  pyproject.toml  scraper.py
